@@ -252,7 +252,7 @@ class MessageProducerCommandContextCloseListenerTest {
 
         List<Message<CloudRuntimeEvent<?, ?>[]>> capturedMessages = this.messageArgumentCaptor.getAllValues();
 
-        assertThat(capturedMessages.get(0).getPayload()).hasSize(3);
+        assertThat(capturedMessages.getFirst().getPayload()).hasSize(3);
         assertThat(capturedMessages.get(1).getPayload()).hasSize(3);
         assertThat(capturedMessages.get(2).getPayload()).hasSize(2);
 
@@ -352,7 +352,7 @@ class MessageProducerCommandContextCloseListenerTest {
         List<CloudRuntimeEvent<?, ?>> incidentPayload = incidentMessageArgumentCaptor.getValue().getPayload();
         assertThat(incidentPayload).hasSize(1);
 
-        CloudIncidentCreatedEventImpl incident = (CloudIncidentCreatedEventImpl) incidentPayload.get(0);
+        CloudIncidentCreatedEventImpl incident = (CloudIncidentCreatedEventImpl) incidentPayload.getFirst();
         assertThat(incident.getProcessInstanceId()).isEqualTo(MOCK_PROCESS_INSTANCE_ID);
         assertThat(incident.getProcessDefinitionId()).isEqualTo(MOCK_PROCESS_DEFINITION_ID);
         assertThat(incident.getProcessDefinitionKey()).isEqualTo(MOCK_PROCESS_DEFINITION_KEY);
